# dbx-personal-finance-app

./: .env.template  .gitignore  PRD.md  README.md  alembic.ini  app.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20241217_000000_initial_chat_tables.py  20241221_000000_add_user_profiles_table.py
client/: .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
client/public/: test-stream.html
client/scripts/: convert_imports.py
client/src/: App.tsx  main.tsx
client/src/components/about/: AboutView.tsx
client/src/components/background/: README.md  SpatialNetworkBackground.tsx
client/src/components/chat/: ChartRenderer.tsx  ChatBubble.tsx  ChatCore.tsx  ChatInput.tsx  ChatModal.tsx  ChatPanel.tsx  ChatView.tsx  ChatWidget.tsx  Message.tsx  MessageList.tsx  ToolCallStatus.tsx
client/src/components/dashboard/: DashboardView.tsx
client/src/components/finance/: AllocationChart.tsx  AssetsList.tsx  BentoCard.tsx  CashflowSankey.tsx  CashflowView.tsx  ChartTabs.tsx  DailyCashflowChart.tsx  FinanceDashboard.tsx  FinancialNews.tsx  GrowthProjectionChart.tsx  HoldingsTable.tsx  InvestmentsSummaryCards.tsx  InvestmentsView.tsx  LiabilitiesList.tsx  NetWorthView.tsx  NewsCard.tsx  PerformanceChart.tsx  SummaryCards.tsx  TransactionFilters.tsx  TransactionTable.tsx  formatters.ts  index.ts
client/src/components/home/: HomeView.tsx
client/src/components/ui/: button.tsx
client/src/contexts/: AgentsContext.tsx  AppConfigContext.tsx  NavigationContext.tsx  PersonasContext.tsx  ThemeContext.tsx  UserContext.tsx
client/src/hooks/: useAgents.ts  usePersonas.ts  useResizable.ts  useUserInfo.ts
client/src/lib/: types.ts
client/src/pages/: AboutPage.tsx  CashflowPage.tsx  ChatPage.tsx  DashboardPage.tsx  HomePage.tsx  InvestmentsPage.tsx  LoginPage.tsx  NetWorthPage.tsx  ProfilePage.tsx  ToolsPage.tsx
client/src/styles/: globals.css  textures.css  theme.css
config/: app.json
docs/: DBSQL_SETUP.md  LAKEBASE_SETUP.md  limitations-and-roadmap.md  user-guide.md
docs/features/: chat-storage.md  feedback.md  session-management.md  tracing.md
scripts/: check.sh  deploy.sh  fix.sh  generate_server_requirements.py  setup.sh  start_dev.sh
scripts/sql/: create_tables.sql  seed_data.sql  seed_data_alice.sql  seed_data_bob.sql
server/: app.py  chat_storage.py  config_loader.py  tracing.py
server/data/: __init__.py  sample_finance.py  sample_investments.py  sample_transactions.py
server/db/: __init__.py  database.py  dbsql.py  lakebase_auth.py  models.py
server/models/: __init__.py  finance.py  news.py  profile.py
server/routers/: __init__.py  agent.py  chat.py  config.py  finance.py  health.py  news.py  profile.py
server/services/: mcp_client.py  news_service.py  user.py
server/services/agents/: agent_bricks_service.py  table_parser.py
server/services/chat/: __init__.py  base.py  memory.py  postgres.py
tests/: test_agent_bricks_service.py  test_mas.py
(+16 files in other folders)
